add session redirect

--- a/view/home.html
+++ b/view/home.html
@@ -25,6 +25,11 @@
     }
 </style>
 <body>
+<form action="/logout" method="post">
+    <div style="text-align: right">
+        <button type="submit" >Logout</button>
+    </div>
+</form>
 <div style="text-align: center">
     <div>
         <ul>
