fix offline message handling

--- a/view/template/home.html
+++ b/view/template/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home_GoChat</title>
-    <script src="/static/js/home.js"></script>
+    <script src="/view/static/js/home.js"></script>
 </head>
 <style>
     *{
