--- a/view/template/room.html
+++ b/view/template/room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Room_GoChat</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/js/room.js"></script>
+    <script src="/view/static/js/room.js"></script>
 </head>
 <style>
     *{
