--- a/view/template/index.html
+++ b/view/template/index.html
@@ -6,6 +6,7 @@
     <link href="/view/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/view/bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
+    <script src="/view/static/js/index.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -25,10 +26,10 @@
 </nav>
 <div class="container mt-3 mb-3" style="width: 50%">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Search">
-        <button class="btn btn-primary" type="submit">Go</button>
+        <input type="text" class="form-control" id="room_name" placeholder="Search">
+        <button class="btn btn-primary" onclick="search()">Go</button>
     </div>
-    <div class="list-group overflow-y-auto border" style="height: 400px;">
+    <div class="list-group overflow-y-auto border" style="height: 400px;" id="searchResult">
         {{range .}}
         <a href="/room/{{.ID}}" class="list-group-item list-group-item-action d-flex gap-3 py-3" id="{{.ID}}">
             <div class="d-flex gap-2 w-100 justify-content-between">
