--- a/view/template/new.html
+++ b/view/template/new.html
@@ -2,16 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New_GoChat</title>
+    <title>New | GoChat</title>
+    <link href="/view/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/view/bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
-<form action="/index/new" method="post">
-    <div style="text-align: center">
-        <input type="hidden" id="userId" name="userId" value="{{.userId}}">
+<div class="container p-3 my-5 border" style="width: 25%">
+    <h4 class="text-center">Create new room</h4>
+    <form action="/index/new" method="post">
+        <input type="hidden" id="userId" name="user_id" value="{{.userId}}">
         <input type="hidden" id="username" name="username" value="{{.username}}">
-        <input type="text" name="room_name" placeholder="please input room name">
-        <button type="submit" >create</button>
-    </div>
-</form>
+        <div class="form-floating mb-3 mt-3">
+            <input type="text" class="form-control" id="room_name" placeholder="Room name" name="room_name">
+            <label for="room_name">Room name</label>
+        </div>
+        <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-primary">OK</button>
+            <a href="/index" class="btn btn-secondary">Cancel</a>
+        </div>
+    </form>
+</div>
 </body>
 </html>
