--- a/view/template/signup.html
+++ b/view/template/signup.html
@@ -6,23 +6,25 @@
     <link href="/view/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/view/bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
+    <script src="/view/static/js/signup.js"></script>
 </head>
 <body>
+<div class="container mt-3" style="width: 35%" id="alertDock"></div>
 <div class="container p-3 my-5 border" style="width: 25%">
     <h4 class="text-center">Join us</h4>
-    <form action="/signup" method="post">
-        <div class="form-floating mb-3 mt-3">
-            <input type="text" class="form-control" id="username" placeholder="Username" name="username">
-            <label for="username">Username</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-            <label for="password">Password</label>
-        </div>
-        <div class="d-grid">
-            <button type="submit" class="btn btn-primary">Sign up</button>
-        </div>
-    </form>
+    <!--<form action="/signup" method="post">-->
+    <div class="form-floating mb-3 mt-3">
+        <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+        <label for="username">Username</label>
+    </div>
+    <div class="form-floating mb-3">
+        <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+        <label for="password">Password</label>
+    </div>
+    <div class="d-grid">
+        <button class="btn btn-primary" onclick="signup()">Sign up</button>
+    </div>
+    <!--</form>-->
 </div>
 </body>
 </html>
