--- a/view/template/room.html
+++ b/view/template/room.html
@@ -16,9 +16,17 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <div class="container-fluid">
         <div class="collapse navbar-collapse">
+            <div class="navbar-header me-auto">
+                <a href="https://github.com/SkylinerZzz/gochat" target="_blank" class="navbar-brand">GoChat</a>
+            </div>
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
                     <a class="navbar-brand">{{.room_name}}</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-primary">{{.username}}</a>
                 </li>
             </ul>
         </div>
@@ -44,7 +52,7 @@
         </div>
         <div class="list-group-item border-0">
             <div class="row receive">
-                <span class="head">developer</span>
+                <span class="head"><a class="text-dark" style="text-decoration: none" href="" data-bs-toggle="modal" data-bs-target="#profileModal">developer</a></span>
                 <span class="body">hello</span>
             </div>
         </div>
@@ -64,6 +72,23 @@
         </div>
         <div class="col-2 ps-1">
             <button class="btn btn-primary" style="width: 100%" id="sendBtn" onclick="send()" disabled>Send</button>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="profileModal">
+    <input type="hidden" id="toUserId">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="profileUsername"></h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body" style="height: 200px">
+            </div>
+            <div class="modal-footer">
+                <a href="/private-chat" class="btn btn-success form-control" onclick="privateChat()">Send message</a>
+            </div>
+
         </div>
     </div>
 </div>
