add private chat

--- a/view/template/room.html
+++ b/view/template/room.html
@@ -86,9 +86,8 @@
             <div class="modal-body" style="height: 200px">
             </div>
             <div class="modal-footer">
-                <a href="/private-chat" class="btn btn-success form-control" onclick="privateChat()">Send message</a>
+                <button class="btn btn-success form-control" onclick="privateChat()">Send message</button>
             </div>
-
         </div>
     </div>
 </div>
